WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128013
WebKit2 View Gestures (Swipe): Crashes swiping around a Google Docs spreadsheet
https://bugs.webkit.org/show_bug.cgi?id=128013
Summary
WebKit2 View Gestures (Swipe): Crashes swiping around a Google Docs spreadsheet
Tim Horton
Reported
2014-01-31 13:03:20 PST
We should never (currently) start a swipe from a non-begin-phase wheel event. We already check this in handleScrollWheelEvent, but can still get non-begin-phase events in wheelEventWasNotHandled. And, AppKit throws an exception when we try to start a swipe from end-phase events. <
rdar://problem/15959481
>
Attachments
patch
(2.05 KB, patch)
2014-01-31 13:09 PST
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-01-31 13:09:24 PST
Created
attachment 222841
[details]
patch
Tim Horton
Comment 2
2014-01-31 13:09:53 PST
Comment on
attachment 222841
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=222841&action=review
> Source/WebKit2/ChangeLog:24 > - Sideways 'wobble' when scrolling with trackpad on Mavericks > -
https://bugs.webkit.org/show_bug.cgi?id=127521
> - -and corresponding- > + Sideways 'wobble' when scrolling with trackpad on Mavericks > +
https://bugs.webkit.org/show_bug.cgi?id=127521
> + -and corresponding-
I don't know what my editor is doing here.
Tim Horton
Comment 3
2014-01-31 13:13:33 PST
http://trac.webkit.org/changeset/163192
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug